syntax = "proto3";

package proto.v1beta1.post;

option go_package = "pb/v1beta1/post";

import "google/api/annotations.proto";

service Post {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
    option (google.api.http) = {
      post: "/v2/posts"
      body: "*"
    };
  };
  rpc GetPost(GetPostByIDRequest) returns (GetPostByIDResponse) {
    option (google.api.http) = {
      get: "/v2/posts/{id}"
    };
  };
  rpc GetPostByUser(GetPostByUserRequest) returns (GetPostByUserResponse) {
    option (google.api.http) = {
      get: "/v2/posts/users/{user_id}"
    };
  };
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {
    option (google.api.http) = {
      put: "/v2/posts/{id}"
    };
  };
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {
    option (google.api.http) = {
      delete: "/v2/posts/{id}"
    };
  };
}

message PostMessage {
  int64 id = 1;
  string title = 2;
  string content = 3;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  int64 user_id = 3;
}

message CreatePostResponse {
  PostMessage post = 1;
}

message UpdatePostRequest {
  int64 id = 1;
  string title = 2;
  string content = 3;
}

message UpdatePostResponse {
  PostMessage post = 1;
}

message DeletePostRequest {
  int64 id = 1;
}

message DeletePostResponse {

}

message GetPostByIDRequest {
  int64 id = 1;
}

message GetPostByIDResponse {
  PostMessage post = 1;
}

message GetPostByUserRequest {
  int64 user_id = 1;
}

message GetPostByUserResponse {
  repeated PostMessage post = 1;
}
